force-app/main/default/objects/ContentVersion/fields/I_RS_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>