force-app/main/default/objects/ContentVersion/fields/I_RS_Last_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Last_Viewed_Date__c</fullName>
    <description>The timestamp for when the current user last viewed this record. If this value is null, this record might only have been referenced (LastReferencedDate) and not viewed.</description>
    <label>Last Viewed Date</label>
    <type>Date</type>
</CustomField>