force-app/main/default/objects/ContentVersion/fields/I_RS_Source_System__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source_System__c</fullName>
    <description>The original source system where the attachment resided before data migration</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>