force-app/main/default/objects/ContentVersion/fields/I_RS_Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source_System_ID__c</fullName>
    <description>Id from RM</description>
    <label>Source System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>