force-app/main/default/objects/ContentVersion/validationRules/ResearchersEditRghtsForRecordName.validationRule-meta.xml
<ValidationRule>
    <fullName>ResearchersEditRghtsForRecordName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;), 
OwnerId != $User.Id,
NOT(ISBLANK(Title)),
ISCHANGED(Title)
)</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>You can&apos;t change the Title</errorMessage>
</ValidationRule>